# vivid-opencv

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  module.json
.github/workflows/: ci.yml  release.yml
examples/blob-tracking/: chain.cpp
examples/contours-video/: chain.cpp
examples/contours-webcam/: chain.cpp
examples/optical-flow/: chain.cpp
include/vivid/opencv/: blob_track.h  contours.h  export.h  opencv.h  optical_flow.h  texture_converter.h
src/: blob_track.cpp  contours.cpp  opencv.cpp  optical_flow.cpp  texture_converter.cpp
